<resources>
    <string name="app_name">AnimationDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="plus">十字</string>
    <string name="shutter">百叶窗</string>
    <string name="translate">切换</string>
    <string name="box">盒状</string>
    <string name="triangle">三角形</string>
    <string name="submit">确认</string>
    <string name="timeHint">请输入动画完成时间(秒)</string>
    <string name="scale">缩放尺度</string>
    <string name="rotate">旋转角度(逆时针)</string>
    <string name="colorHint">RGB值,以空格分开(如255 0 0)</string>
    <string name="expressionHint">请输入表达式</string>
</resources>
