<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- 定义第一个标签页的内容 -->
            <LinearLayout
                android:id="@+id/tab01"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1,2,3,4">

                    <TableRow>

                        <Button
                            android:id="@+id/plus"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:text="@string/plus" />

                        <Button
                            android:id="@+id/shutter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:text="@string/shutter" />

                        <Button
                            android:id="@+id/translate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:text="@string/translate" />

                        <Button
                            android:id="@+id/box"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:text="@string/box" />
                        <Button
                            android:id="@+id/triangle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:text="@string/triangle" />


                    </TableRow>
                </TableLayout>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1">

                    <TableRow>

                        <!--表明是数值输入框-->
                        <EditText
                            android:id="@+id/time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/timeHint"
                            android:inputType="number" />

                        <Button
                            android:id="@+id/submit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/submitBlue"
                            android:text="@string/submit" />
                    </TableRow>
                </TableLayout>

                <com.example.kingsoft.animationdemo.PathView
                    android:id="@+id/pathView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
            </LinearLayout>
            <!-- 定义第二个标签页的内容 -->
            <LinearLayout
                android:id="@+id/tab02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0">

                    <TableRow>

                        <EditText
                            android:id="@+id/expression"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/expressionHint" />

                        <Button
                            android:id="@+id/submit1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/submitBlue"
                            android:text="@string/submit" />
                    </TableRow>
                </TableLayout>

                <ImageView
                    android:id="@+id/translateImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/image3" />
            </LinearLayout>


            <!--定义第三个标签页的内容-->
            <LinearLayout
                android:id="@+id/tab03"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1">

                    <TableRow>

                        <EditText
                            android:id="@+id/scale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/scale"
                            android:inputType="numberDecimal" />

                        <EditText
                            android:id="@+id/angle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/rotate"
                            android:inputType="numberDecimal" />
                    </TableRow>

                </TableLayout>

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1">

                    <TableRow>

                        <EditText
                            android:id="@+id/time2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/timeHint"
                            android:inputType="number" />

                        <Button
                            android:id="@+id/submit2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/submitBlue"
                            android:text="@string/submit" />
                    </TableRow>
                </TableLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/scaleImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="center"
                    android:src="@drawable/image3" />
                </LinearLayout>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/tab04"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:stretchColumns="0,1">

                    <TableRow>

                        <EditText
                            android:id="@+id/color"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/colorHint" />

                        <Button
                            android:id="@+id/submit3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/submitBlue"
                            android:text="@string/submit" />
                    </TableRow>
                </TableLayout>

                <com.example.kingsoft.animationdemo.ColorView
                    android:id="@+id/colorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>


        </FrameLayout>
    </LinearLayout>
</TabHost>